<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="booking_title">Бронирование</string>
    <string name="departure_from">Вылет из</string>
    <string name="country_city">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="nights_count">Кол-во ночей</string>
    <string name="hotel">Отель</string>
    <string name="room">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="tour">Тур</string>
    <string name="fuel_charge">Топливный сбор</string>
    <string name="service_charge">Сервисный сбор</string>
    <string name="payment">К оплате</string>
    <string name="privacy_policy">Эти данные никому не передаются. После оплаты мы вышлем чек на указанный вами номер и почту</string>
    <string name="buyer_information_text">Информация о покупателе</string>
    <string name="input_phone_number">Введите номер телефона</string>
    <string name="input_email">Введите email</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="passport_expires">Срок действия загранпаспорта</string>
    <string name="success_payment_order">Заказ оплачен</string>
    <string name="time_to_accept_order">Подтверждение заказа №104893 может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="order_took_to_work">Ваш заказ принят в работу</string>
    <string name="superText">Супер!</string>
</resources>
