<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp"
    app:strokeWidth="0dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/departureFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/secondary_text_style"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/departure_from" />

        <TextView
            android:id="@+id/departureFromText"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/primary_text_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Санкт Петербург" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/secondary_text_style"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/countryAndCityText"
            android:text="@string/country_city" />

        <TextView
            android:id="@+id/countryAndCityText"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/primary_text_style"
            app:layout_constraintStart_toStartOf="@id/departureFromText"
            app:layout_constraintTop_toBottomOf="@id/departureFromText"
            tools:text="Египет, Хургада" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/secondary_text_style"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/datesText"
            android:text="@string/dates" />

        <TextView
            android:id="@+id/datesText"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/primary_text_style"
            app:layout_constraintStart_toStartOf="@id/countryAndCityText"
            app:layout_constraintTop_toBottomOf="@id/countryAndCityText"
            tools:text="19.09.2023 – 27.09.2023" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/secondary_text_style"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/nightsAmountText"
            android:text="@string/nights_count" />

        <TextView
            android:id="@+id/nightsAmountText"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/primary_text_style"
            app:layout_constraintStart_toStartOf="@id/datesText"
            app:layout_constraintTop_toBottomOf="@id/datesText"
            tools:text="7 ночей" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/secondary_text_style"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/hotelNameText"
            android:text="@string/hotel" />

        <TextView
            android:id="@+id/hotelNameText"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/primary_text_style"
            app:layout_constraintStart_toStartOf="@id/nightsAmountText"
            app:layout_constraintTop_toBottomOf="@id/nightsAmountText"
            tools:text="Steigenberger Makadi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/secondary_text_style"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/roomNameText"
            android:text="@string/room" />

        <TextView
            android:id="@+id/roomNameText"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/primary_text_style"
            app:layout_constraintStart_toStartOf="@id/hotelNameText"
            app:layout_constraintTop_toBottomOf="@id/hotelNameText"
            tools:text="Стандартный с видом на бассейн или сад" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/secondary_text_style"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/foodTypeText"
            android:text="@string/nutrition" />

        <TextView
            android:id="@+id/foodTypeText"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/primary_text_style"
            app:layout_constraintStart_toStartOf="@id/roomNameText"
            app:layout_constraintTop_toBottomOf="@id/roomNameText"
            tools:text="Все включено" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>
