<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/touristCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp"
    app:strokeWidth="0dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fixed_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/touristNumber"
                style="@style/bold_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@color/white"
                android:src="@drawable/collapsed_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/hidden_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/fixed_view">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInput"
                style="@style/textInputLayout_custom_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:theme="@style/textInputLayout_custom_theme"
                app:boxBackgroundColor="@color/gray_light"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameInput"
                style="@style/textInputLayout_custom_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:theme="@style/textInputLayout_custom_theme"
                app:boxBackgroundColor="@color/gray_light"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/surname"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthdayInput"
                style="@style/textInputLayout_custom_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:theme="@style/textInputLayout_custom_theme"
                app:boxBackgroundColor="@color/gray_light"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthdayText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/birthday"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/citizenshipInput"
                style="@style/textInputLayout_custom_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:theme="@style/textInputLayout_custom_theme"
                app:boxBackgroundColor="@color/gray_light"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/citizenshipText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/citizenship"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passportNumberInput"
                style="@style/textInputLayout_custom_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:theme="@style/textInputLayout_custom_theme"
                app:boxBackgroundColor="@color/gray_light"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passportNumberText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/passport_number"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passportExpiresInput"
                style="@style/textInputLayout_custom_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:theme="@style/textInputLayout_custom_theme"
                app:boxBackgroundColor="@color/gray_light"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passportExpiresText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/passport_expires"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>
